--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-xiaomi-air-purifier3",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Homebridge plugin for controlling Xiaomi Air Purifier 3/3H",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "homebridge": ">=0.2.0"
   },
   "dependencies": {
-    "miio": "^0.15.6"
+    "miio": "^0.15.6",
+    "fakegato-history": "^0.6.1"
   }
 }
